# rtd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ext/glad/debug/include/glad/: glad.h
ext/glad/debug/src/: glad.c
ext/glad/release/include/glad/: glad.h
ext/glad/release/src/: glad.c
ext/stb/: stb_truetype.h
lib/glad/debug/include/glad/: glad.h
lib/glad/release/include/glad/: glad.h
libs/glad/debug/src/: glad.c
libs/glad/release/src/: glad.c
src/: cgmath.c  cgmath.h  game.h  game_context.h  game_node.c  game_node.h  gen_shaders.c  image.c  image.h  main.c  renderer.c  renderer.h  time.c  time.h  window.c  window.h
src/shader/: draw_rect.frag  draw_rect.vert  draw_texture.frag  draw_texture.vert
src/shaders/: test.frag  test.vert
src/tool/: char2hex.c
